# jodin-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  generate_node.asm
.github/: issue-branch.yml
.github/workflows/: create_branches.yml  document.yml  fast_track.yml  rust.yml  rust_check.yml  rust_document.yml  rust_release.yml  rust_test.yml  stage.yml
examples/: hello_world.ast  hello_world.jdn  hello_world.pt
jasm-macros/: Cargo.toml
jasm-macros/src/: lib.rs
jodin-asm/: Cargo.toml
jodin-asm-derive/: Cargo.toml
jodin-asm-derive/src/: lib.rs
jodin-asm/src/: asm_version.rs  lib.rs  mvp.rs
jodin-asm/src/mvp/: bytecode.rs  location.rs  value.rs
jodin-asm/tests/: bytecode_ops.rs
jodin-benchmarks/: Cargo.toml
jodin-benchmarks/benches/compiled/: compiled_math.rs
jodin-benchmarks/benches/vm/: advanced_functions.rs  native_calls.rs
jodin-common/: Cargo.toml
jodin-common/src/: asm_version.rs  assembly.rs  compilation.rs  compilation_settings.rs  error.rs  identifier.rs  lib.rs  mvp.rs  unit.rs  utility.rs
jodin-common/src/assembly/: asm_block.rs  asm_macros.rs  error.rs  instructions.rs  location.rs  value.rs
jodin-common/src/ast/: jodin_node.rs  mod.rs  node_type.rs
jodin-common/src/core/: external.rs  identifier_resolution.rs  import.rs  literal.rs  mod.rs  operator.rs  privacy.rs  tags.rs
jodin-common/src/core/types/: arrays.rs  base_type.rs  functions.rs  generic_context.rs  intermediate_type.rs  jobject.rs  mod.rs  pointer.rs  primitives.rs  resolved_type.rs  structure.rs  traits.rs  type_environment.rs
jodin-common/src/mvp/: bytecode.rs  error.rs  value.rs
jodin-common/src/parsing/: impl_notes.txt  jodin_grammar.lalrpop  mod.rs
jodin-common/src/types/: arrays.rs  base_type.rs  functions.rs  generic_context.rs  intermediate_type.rs  jobject.rs  mod.rs  pointer.rs  primitives.rs  resolved_type.rs  structure.rs  traits.rs  type_environment.rs
jodin-gradle-plugin/: build.gradle  settings.gradle
jodin-gradle-plugin/src/main/groovy/joshradin/jodin/: JodinBase.groovy
jodin-rs-vm/: Cargo.toml  README.md  structures_impl.md
jodin-rs-vm-derive/: Cargo.toml
jodin-rs-vm-derive/src/: lib.rs
jodin-rs-vm/src/: bytecode.rs  chunk.rs  compound_types.rs  constant_pool.rs  core_traits.rs  error.rs  fault.rs  frame.rs  function_names.rs  generic-conversion.txt  generics.md  lib.rs  loadables.rs  memory.rs  mvp.rs  scoped_memory.rs  symbols.rs  vm.rs
jodin-rs-vm/tests/: dicts.rs  hello_world.rs  mathmatics.rs  print.rs
jodin-tests/: Cargo.toml
jodin-tests-common/: Cargo.toml
jodin-tests-common/src/: jvm_runner.rs  lib.rs
jodin-tests/src/: lib.rs  main.rs  type_system.rs
jodin-vm-kernel/: Cargo.toml
jodin-vm-kernel/src/: lib.rs
jodin-vm-plugins/: Cargo.toml
jodin-vm-plugins/src/: error.rs  lib.rs  plugins.rs
jodin-vm-plugins/src/core/: debug.rs  mod.rs
jodinc/: Cargo.toml
jodinc/src/: cli.rs  compilation_settings.rs  error.rs  error_reporting.rs  lib.rs  main.rs  test_runner.rs  utility.rs
jodinc/src/ast/: intermediate_type.rs  jodin_node.rs  mod.rs  node_type.rs  tags.rs
jodinc/src/compilation/: incremental.rs  mod.rs  object_path.rs
jodinc/src/compilation/c_compiler/: c_type_compiler.rs  components.rs  dependency_graph.rs  function_compiler.rs  mod.rs  statement_compiler.rs  top_level_declaration_compiler.rs
jodinc/src/compilation/incremental/: compilation_graph.rs  declarations_holder.rs  error.rs  incremental_compiler.rs  mod.rs  unit.rs  variant.rs
jodinc/src/compilation/jodin_vm_compiler/: asm_block.rs  class_compiler.rs  expression_compiler.rs  function_compiler.rs  mod.rs  statement_compiler.rs
jodinc/src/core/: error.rs  identifier.rs  identifier_resolution.rs  literal.rs  mod.rs  operator.rs  privacy.rs
jodinc/src/core/generic_context/: mod.rs
jodinc/src/core/types/: arrays.rs  base_type.rs  big_object.rs  functions.rs  generic_context.rs  intermediate_type.rs  jobject.rs  mod.rs  pointer.rs  primitives.rs  resolved_type.rs  structure.rs  traits.rs  type_environment.rs
jodinc/src/core/types/generic_context/: mod.rs
jodinc/src/parsing/: impl_notes.txt  jodin_grammar.lalrpop  mod.rs
jodinc/src/passes/: frontend.rs  mod.rs
jodinc/src/passes/analysis/: dependency_tool.rs  identity_resolution_tool.rs  mod.rs  type_resolution_tool.rs
jodinc/src/passes/optimization/: constant_expressions.rs  mod.rs
jodinc/src/safe_api/: error.rs  mod.rs  translation_object.rs
jodinc/src/safe_api/units/: expression.rs  mod.rs  statement.rs
jodinc/tests/: ackermann.rs  define_class.rs  define_structure.rs
src/: cli.rs  compilation_settings.rs  lib.rs  main.rs  utility.rs
src/ast/: intermediate_type.rs  jodin_node.rs  mod.rs  node_type.rs  tags.rs
src/compilation/: mod.rs
src/compilation/c_compiler/: c_type_compiler.rs  components.rs  function_compiler.rs  mod.rs  statement_compiler.rs  top_level_declaration_compiler.rs
src/core/: dependency_graph.rs  error.rs  generic_context.rs  identifier.rs  identifier_resolution.rs  import.rs  literal.rs  mod.rs  namespace_tree.rs  operator.rs  privacy.rs  registry.rs
src/core/generic_context/: mod.rs
src/core/types/: arrays.rs  mod.rs  primitives.rs  structure.rs  type_environment.rs  type_tracker.rs
src/parsing/: error.rs  jodin_grammar.lalrpop  jodin_grammar.pest  jodin_grammar.report  jodin_grammar.rs  keywords.rs  mod.rs  parser.rs
src/parsing/ast/: intermediate_type.rs  jodin_node.rs  mod.rs  node_type.rs  tags.rs
src/passes/: frontend.rs  mod.rs  toolchain.rs
src/passes/analysis/: dependency_tool.rs  identity_resolution_tool.rs  mod.rs  type_resolution_tool.rs
src/passes/frontend/: mod.rs
src/passes/optimization/: mod.rs  order_of_operation.rs
