[package]
name = "jodin-rs"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
glob = "0.3.0"
clap = "2.33.3"
backtrace = "0.3.60"
itertools = "0.10.1"
num-traits = "0.2.14"