[package]
name = "jodin-rs"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["jodin-rs-vm"]

[features]
default = ["larlpop_parser"]
larlpop_parser = ["lalrpop-util"]
pest_parser = ["pest", "pest_derive"]

[build-dependencies]
lalrpop = "0.19.6"


[dependencies]
pest = { version = "2.1.3", optional=true }
pest_derive = { version = "2.1.0", optional=true }
regex = "1.5.4"
lazy_static = "1.4.0"
glob = "0.3.0"
clap = "2.33.3"
backtrace = "0.3.60"
itertools = "0.10.1"
num-traits = "0.2.14"
either = "1.6.1"
lalrpop-util = { version = "0.19.6", optional=true}
logos = {version = "0.12.0"}
jodin-rs-vm = { path="jodin-rs-vm" }
