# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[workspace]
members = [
    "jodin-rs-vm",
    "jodinc",
    "jodin-tests",
    "jodin-common",
    "jasm-macros",
    "jodin-benchmarks",
    "jodin-tests-common",
    "jodin-vm-plugins",
    "jodin-vm-kernel"
]

