[package]
name = "jodin-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
jodin-tests-common = { path = "../jodin-tests-common"}
jasm-macros = { path = "../jasm-macros"}

[[bench]]
name = "native_calls"
path = "benches/vm/native_calls.rs"
harness = false