[package]
name = "jodin-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version="0.3", features = ["html_reports"] }
jodin-tests-common = { path = "../jodin-tests-common"}
jasm-macros = { path = "../jasm-macros"}

[[bench]]
name = "native_calls"
path = "benches/vm/native_calls.rs"
harness = false

[[bench]]
name = "advanced_functions"
path = "benches/vm/advanced_functions.rs"
harness = false
[[bench]]
name = "compiled_math"
path = "benches/compiled/compiled_math.rs"
harness = false
