[package]
name = "jodin-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
itertools = "0.10.3"
serde_json = "1.0.73"
thiserror = "1.0.30"
backtrace = "0.3.63"
log = "0.4.1"
static_assertions = "1.1.0"
lalrpop-util = "0.19.6"
logos = "0.12.0"
num-traits = "0.2.14"
strum = "0.23.0"
strum_macros = "0.23.1"
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"
num-derive = "0.3"
serde = "1.0.132"
serde_derive = "1.0.132"
simplelog = "0.11.1"
bitfield = "0.13.2"
byteorder = "1.4.3"
bincode = "1.3.3"
anyhow = "1.0.52"
bytemuck = "1.7.3"