[package]
name = "jodin-rs-vm_derive"
version = "0.0.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features=["full"]}

