[package]
name = "jodin-rs-vm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
strict = []

[dependencies]
jodin-asm-derive = { path= "../jodin-asm-derive" }
jodin-asm = { path="../jodin-asm"}

num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
byteorder = "1.4"
bitfield = "0.13"
itertools = "0.10"
regex = "1"
lazy_static = "1.4"
simplelog = { version = "0.11.0", features=["paris"] }
log = "0.4.14"
paris = "1.5.8"