[package]
name = "jodin-vm-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jodin-common = { path="../jodin-common" }

libloading = "0.7.3"
uuid = { version = "0.8.2", features=["v4"] }
thiserror = "1.0.30"