[package]
name = "jodinc"
edition = "2021"
version = "0.1.0"
authors = ["joshradin"]
description = "The compiler for the in-development language jodin."
readme = false
repository = "https://github.com/joshradin/jodin-rs"
license = "MIT OR Apache-2.0"
keywords = ["language", "compilers"]
categories = ["compilers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[features]
default = ["jodin_vm_compiler", "incremental"]
strict = []
c_compiler = []
jodin_vm_compiler = []
incremental = []

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
glob = "0.3.0"
clap = "2.33.3"
backtrace = "0.3.60"
itertools = "0.10.1"
num-traits = "0.2.14"
either = "1.6.1"
lalrpop-util = "0.19.6"
logos = {version = "0.12.0"}
jodin-rs-vm = { path="../jodin-rs-vm", version="0.1.0" }
jodin-common = { path="../jodin-common"}
jasm-macros = { path="../jasm-macros"}
simplelog = { version = "0.11.0", features=["paris"] }
log = "0.4.14"
rand = "0.8.4"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0.30"
static_assertions = "1.1.0"
serde_json = "1.0.73"
anyhow = "1.0.52"
temp-dir = "0.1.11"
walkdir = "2.3.2"